--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>BarCode Scanner</title>
-    <link rel="stylesheet" href="/assets/app.css">
+    <link rel="stylesheet" href="./assets/app.css">
   </head>
   <body>
     <div class="wrapper">
@@ -19,8 +19,8 @@
     </div>
 
 
-    <script src="/neutralino.js"></script>
-    <script src="/assets/app.js"></script>
+    <script src="./assets/neutralino.js"></script>
+    <script src="./assets/app.js"></script>
 
   </body>
 </html>
